kubernetes/testers/nginx-ingress/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress-test
  labels:
    name: nginx-ingress-test
