kubernetes/testers/nginx-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-echo
  namespace: nginx-ingress-test
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: http-echo
