kubernetes/testers/nginx-ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http-echo
  namespace: nginx-ingress-test
  annotations:
    # kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx-external"
    external-dns.alpha.kubernetes.io/hostname: http-echo.dev.k8s.managedkube.com
spec:
  # tls:
  # - hosts:
  #   - echo.example.com
  #   secretName: echoserver-tls
  rules:
  - host: http-echo.dev.k8s.managedkube.com
    http:
      paths:
      - path: /
        backend:
          serviceName: http-echo
          servicePort: 80
